# brainfuck-debugger

./: .gitignore  CMakeLists.txt  README.md  run.sh
assa/: CMakeLists.txt  assa.c  bio.c  debugFunctions.c  debugFunctions.h  interpreter.c  interpreter.h  interpretertest.c
bf_progs/: cat.bf  esp.bf
bio_progs/: 99bottles.bio  hw.bio
test/: test.sh
test/tc/in/: in01.txt  in02.txt  in03.txt
test/tc/ref/: out01.txt  out02.txt  out03.txt
